a1/brendan_gordon/TEST_PROGRAMS/invalidtype/serguei_nevarko/invalid5.min
var y : string;

y = "invalid";

while y do
  print y;
done

